[package]
name = "iotedge-aad"
version = "0.1.0"
authors = ["dmolokanov <dmolokanov@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
reqwest = { version = "0.10", features  = ["json"]}
tokio = { version = "0.2", features = ["full"] }
url = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = { version = "0.10.1", default-features = false, features = ["json"] }

[dev-dependencies]
matches = "0.1"
