[package]
name = "iotedge-aad"
version = "0.1.0"
authors = ["dmolokanov <dmolokanov@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
reqwest = { version = "0.10", features  = ["json"], default-features = false }
tokio = { version = "0.2", features = ["macros"], default-features = false }
url = "2.1"
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1.0"
config = { version = "0.10.1", features = ["json"], default-features = false }
openssl = "0.10.26"
openssl-sys = "0.9.53"
hex = "0.4.0"
uuid = { version = "0.8", features = ["serde", "v4"], default-features = false }
chrono = "0.4.10"
base64 = "0.11.0"

[dev-dependencies]
matches = "0.1"
